[package]
name = "sunset"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sunrise = "1.0.1"
surrealdb = "1.5.3"
tokio = { version = "1.38.0", features = ["full"] }
